--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Project Title</title>
+  <title>CDE4301 Interim Report - Lakshmi</title>
   <link rel="icon" href="./favicon.ico" type="image/x-icon">
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.16.0/cdn/themes/light.css" />
@@ -35,20 +35,21 @@
 
 <body>
   <div class="content">
-    <h1>Project Title</h1>
+    <h1>CDE4301 Interim Report</h1>
 
     <!-- This is the team member component use to display details about your team members -->
     <div class="team-member-wrapper">
-      <team-member avatar="assets/blackranger.png" name="Black" department="Mechanical Engineering"
+      <team-member avatar="assets/Lakshmi profile photo.png" name="Lakshmi Sujeesh" department="Biomedical Engineering"
+      matriculation_number="A0238379M"></team-member>
+      <!-- <team-member avatar="assets/yellowranger.png" name="Yellow" department="Computer Engineering"
         year="1993"></team-member>
-      <team-member avatar="assets/yellowranger.png" name="Yellow" department="Computer Engineering"
-        year="1993"></team-member>
-      <team-member avatar="assets/redranger.png" name="Red" department="Electrical Engineering"
+      <team-member avatar="assets/redranger.png" 
+      name="Red" department="Electrical Engineering"
         year="1993"></team-member>
       <team-member avatar="assets/pinkranger.png" name="Pink" department="Biomedical Engineering"
         year="1993"></team-member>
       <team-member avatar="assets/blueranger.png" name="Blue" department="Chemical Engineering"
-        year="1993"></team-member>
+        year="1993"></team-member> -->
     </div>
 
     <!-- This is a divide from the shoelace library for aesthetic purpose -->
