--- a/index.html
+++ b/index.html
@@ -1058,7 +1058,7 @@
     <!-- Initializer -->
     <script>
         Flatdoc.run({
-            fetcher: Flatdoc.file('./index.md')
+            fetcher: Flatdoc.file('https://raw.githubusercontent.com/lakshmi-sujeesh/CDE4301/refs/heads/main/index.md')
         });
     </script>
 </head>
