modified font colour

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             font-family: Helvetica Neue, Open Sans, sans-serif;
             line-height: 1.6;
             font-size: 13px;
-            color: #505050;
+            color: #000000;
         }
 
         @media (max-width: 480px) {
@@ -449,7 +449,7 @@
         .content h1:first-child,
         .content h1:first-child a,
         .content h1:first-child a:visited {
-            color: #505050;
+            color: #000000;
         }
 
         .content h1:first-child:before {
@@ -1058,7 +1058,7 @@
     <!-- Initializer -->
     <script>
         Flatdoc.run({
-            fetcher: Flatdoc.file('./index.md')
+            fetcher: Flatdoc.github('lakshmi-sujeesh/CDE4301', 'index.md')
         });
     </script>
 </head>
